# slam_karto

./: README
karto/: CMakeLists.txt  KartoSDK-2.1.3.6482-Linux-64.patch  Makefile.kartoSDK  manifest.xml
karto/cfg/: karto.cfg
karto/src/: slam_ctl.cpp  slam_karto.cpp  spa_solver.cpp  spa_solver.h
karto/srv/: LoadMapperState.srv  SaveMapperState.srv
